<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zeevox.dogscreen.demo.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_padding"
            android:id="@+id/card_view_welcome">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_padding">
                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:id="@+id/dogscreen_icon"
                    android:src="@drawable/dogscreen_icon"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/dogscreen_application_icon"/>
                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_below="@id/dogscreen_icon"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_welcome_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <Button
                    android:id="@+id/example_default_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:text="@string/example_default_text"
                    android:layout_below="@+id/welcome_text"
                    android:layout_marginBottom="0dp" />

                <Button
                    android:id="@+id/example_fab_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_fab_text"
                    android:layout_marginTop="0dp"
                    android:layout_below="@+id/example_default_button"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:id="@+id/example_fullscreen_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_fullscreen_text"
                    android:layout_marginTop="0dp"
                    android:layout_below="@+id/example_fab_button"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>
